@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.8 2005/03/18 10:49:50 imilh Exp $
+# $NetBSD: Makefile,v 1.9 2005/04/03 09:05:26 imilh Exp $
 #
 
-DISTNAME=		pkg_select-20050318
+DISTNAME=		pkg_select-20050403
 CATEGORIES=		pkgtools
 MASTER_SITES=	# empty
 DISTFILES=	# empty
