@@ -1,3 +1,9 @@
+03 / 04 / 2005
+--------------
+
+. added wait popup on pkgfind
+. PLIST print on local and ftp
+
 15 / 03 / 2005
 --------------
 
